--- a/report/lastpaper_jasa/bibliography.bib
+++ b/report/lastpaper_jasa/bibliography.bib
@@ -1,18 +1,26 @@
-@article{alagoz2010operations,
-  title={Operations research models for cancer screening},
-  author={Alagoz, Oguzhan and Ayer, Turgay and Erenay, Fatih Safa},
-  journal={Wiley encyclopedia of operations research and management science},
-  year={2010},
-  publisher={Wiley Online Library}
+@book{alagoz2010operations,
+author = {Alagoz, Oguzhan and Ayer, Turgay and Erenay, Fatih Safa},
+publisher = {American Cancer Society},
+isbn = {9780470400531},
+title = {Operations Research Models for Cancer Screening},
+booktitle = {Wiley Encyclopedia of Operations Research and Management Science},
+year = {2011}
 }
 
 @article{mcculloch2005generalized,
   title={Generalized linear mixed models},
   author={McCulloch, Charles E and Neuhaus, John M},
-  journal={Encyclopedia of biostatistics},
+  journal={Encyclopedia of Biostatistics},
   volume={4},
   year={2005},
   publisher={Wiley Online Library}
+}
+
+@inproceedings{sunberg2018online,
+  title={Online algorithms for POMDPs with continuous state, action, and observation spaces},
+  author={Sunberg, Zachary N and Kochenderfer, Mykel J},
+  booktitle={Twenty-Eighth International Conference on Automated Planning and Scheduling},
+  year={2018}
 }
 
 @article{alwan2010monitoring,
@@ -39,7 +47,7 @@ pages={325-333.e2}
 @article{sassi2006calculating,
   title={Calculating {QALYs}, comparing {QALY} and {DALY} calculations},
   author={Sassi, Franco},
-  journal={Health policy and planning},
+  journal={Health Policy and Planning},
   volume={21},
   number={5},
   pages={402--408},
@@ -50,7 +58,7 @@ pages={325-333.e2}
 @article{jullion2007robust,
   title={Robust specification of the roughness penalty prior distribution in spatially adaptive Bayesian P-splines models},
   author={Jullion, Astrid and Lambert, Philippe},
-  journal={Computational statistics \& data analysis},
+  journal={Computational Statistics \& Data Analysis},
   volume={51},
   number={5},
   pages={2542--2558},
@@ -61,7 +69,7 @@ pages={325-333.e2}
 @article{andrinopoulou2016bayesian,
   title={Bayesian shrinkage approach for a joint model of longitudinal and survival outcomes assuming different association structures},
   author={Andrinopoulou, Eleni-Rosalina and Rizopoulos, Dimitris},
-  journal={Statistics in medicine},
+  journal={Statistics in Medicine},
   volume={35},
   number={26},
   pages={4813--4823},
@@ -149,7 +157,7 @@ publisher={Taylor \& Francis Group}
 @article{loeb2014overdiagnosis,
   title={Overdiagnosis and overtreatment of prostate cancer},
   author={Loeb, Stacy and Bjurlin, Marc A and Nicholson, Joseph and Tammela, Teuvo L and Penson, David F and Carter, H Ballentine and Carroll, Peter and Etzioni, Ruth},
-  journal={European urology},
+  journal={European Urology},
   volume={65},
   number={6},
   pages={1046--1055},
@@ -161,7 +169,7 @@ publisher={Taylor \& Francis Group}
   title={The 2014 International Society of Urological Pathology ({ISUP}) consensus conference on 
   {Gleason} grading of prostatic carcinoma},
   author={Epstein, Jonathan I and Egevad, Lars and Amin, Mahul B and Delahunt, Brett and Srigley, John R and Humphrey, Peter A},
-  journal={The American journal of surgical pathology},
+  journal={The American Journal of Surgical Pathology},
   volume={40},
   number={2},
   pages={244--252},
@@ -194,7 +202,7 @@ publisher={Wiley}
 @article{inoue2018comparative,
   title={Comparative Analysis of Biopsy Upgrading in Four Prostate Cancer Active Surveillance Cohorts},
   author={Inoue, Lurdes YT and Lin, Daniel W and Newcomb, Lisa F and Leonardson, Amy S and Ankerst, Donna and Gulati, Roman and Carter, H Ballentine and Trock, Bruce J and Carroll, Peter R and Cooperberg, Matthew R and others},
-  journal={Annals of internal medicine},
+  journal={Annals of Internal Medicine},
   volume={168},
   number={1},
   pages={1--9},
@@ -205,7 +213,7 @@ publisher={Wiley}
 @article{krist2007timing,
   title={Timing of repeat colonoscopy: disparity between guidelines and endoscopists’ recommendation},
   author={Krist, Alex H and Jones, Resa M and Woolf, Steven H and Woessner, Sarah E and Merenstein, Daniel and Kerns, J William and Foliaco, Walter and Jackson, Paul},
-  journal={American journal of preventive medicine},
+  journal={American Journal of Preventive Medicine},
   volume={33},
   number={6},
   pages={471--478},
@@ -236,7 +244,7 @@ publisher={Wiley}
 @article{loeb2013systematic,
   title={Systematic review of complications of prostate biopsy},
   author={Loeb, Stacy and Vellekoop, Annelies and Ahmed, Hashim U and Catto, James and Emberton, Mark and Nam, Robert and Rosario, Derek J and Scattoni, Vincenzo and Lotan, Yair},
-  journal={European urology},
+  journal={European Urology},
   volume={64},
   number={6},
   pages={876--892},
@@ -247,7 +255,7 @@ publisher={Wiley}
 @article{loeb2014heterogeneity,
   title={Heterogeneity in active surveillance protocols worldwide},
   author={Loeb, Stacy and Carter, H Ballentine and Schwartz, Mark and Fagerlin, Angela and Braithwaite, R Scott and Lepor, Herbert},
-  journal={Reviews in urology},
+  journal={Reviews in Urology},
   volume={16},
   number={4},
   pages={202--203},
@@ -270,7 +278,7 @@ publisher={Wiley}
 @article{newcomer1997temporal,
   title={Temporal trends in rates of prostate cancer: declining incidence of advanced stage disease, 1974 to 1994},
   author={Newcomer, Laura M and Stanford, Janet L and Blumenstein, Brent A and Brawer, Michael K},
-  journal={The Journal of urology},
+  journal={The Journal of Urology},
   volume={158},
   number={4},
   pages={1427--1430},
@@ -281,12 +289,23 @@ publisher={Wiley}
 @article{nieboer2018active,
   title={Active surveillance: a review of risk-based, dynamic monitoring},
   author={Nieboer, Daan and Tomer, Anirudh and Rizopoulos, Dimitris and Roobol, Monique J and Steyerberg, Ewout W},
-  journal={Translational andrology and urology},
+  journal={Translational andrology and Urology},
   volume={7},
   number={1},
   pages={106--115},
   year={2018},
   publisher={AME Publications}
+}
+
+@article{steyerberg2010assessing,
+  title={Assessing the performance of prediction models: a framework for some traditional and novel measures},
+  author={Steyerberg, Ewout W and Vickers, Andrew J and Cook, Nancy R and Gerds, Thomas and Gonen, Mithat and Obuchowski, Nancy and Pencina, Michael J and Kattan, Michael W},
+  journal={Epidemiology (Cambridge, Mass.)},
+  volume={21},
+  number={1},
+  pages={128},
+  year={2010},
+  publisher={NIH Public Access}
 }
 
 @book{rizopoulos2012joint,
@@ -309,7 +328,7 @@ isbn = {9781439872864}
 }
 
 @article{weusten2017endoscopic,
-  title={Endoscopic management of {Barrett's} esophagus: European Society of Gastrointestinal Endoscopy (ESGE) position statement},
+  title={Endoscopic management of {Barrett's} esophagus: European Society of Gastrointestinal Endoscopy ({ESGE}) position statement},
   author={Weusten, Bas and Bisschops, Raf and Coron, Emanuel and Dinis-Ribeiro, M{\'a}rio and Dumonceau, Jean-Marc and Esteban, Jos{\'e}-Miguel and Hassan, Cesare and Pech, Oliver and Repici, Alessandro and Bergman, Jacques and others},
   journal={Endoscopy},
   volume={49},
@@ -319,13 +338,13 @@ isbn = {9781439872864}
   publisher={{\copyright} Georg Thieme Verlag KG}
 }
 
-@incollection{steimle2017markov,
-  title={Markov decision processes for screening and treatment of chronic diseases},
+@book{steimle2017markov,
+  title={Markov Decision Processes for Screening and Treatment of Chronic Diseases},
   author={Steimle, Lauren N and Denton, Brian T},
   booktitle={Markov Decision Processes in Practice},
   pages={189--222},
   year={2017},
-  publisher={Springer}
+  publisher={Springer International Publishing}
 }
 
 @article{taylor2013real,
@@ -350,13 +369,33 @@ publisher={Wiley}
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
+@article{wang2019learning,
+  title={Learning-based biomarker-assisted rules for optimized clinical benefit under a risk-constraint},
+  author={Wang, Yanqing and Zhao, Ying-Qi and Zheng, Yingye},
+  journal={Biometrics},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{tomer2019personalizedbiometrics,
+  title={Personalized schedules for surveillance of low-risk prostate cancer patients},
+  author={Tomer, Anirudh and Nieboer, Daan and Roobol, Monique J and Steyerberg, Ewout W and Rizopoulos, Dimitris},
+  journal={Biometrics},
+  volume={75},
+  number={1},
+  pages={153--162},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
 @article{tomer2020webapp,
-  title={A Ready To Use Web-Application Providing a Personalized Biopsy Schedule for Men With Low-Risk {PCa} Under Active Surveillance},
-  author={Tomer, Anirudh and Nieboer, Daan and Roobol, Monique J and Bjartell, Anders and Steyerberg, Ewout W and Rizopoulos, Dimitris and et al.},
+  title={Personalized Biopsy Schedules Based on Risk of Gleason Upgrading for Low-Risk Prostate Cancer Active Surveillance Patients},
+  author={Tomer, Anirudh and Nieboer, Daan and Roobol, Monique J and Bjartell, Anders and Steyerberg, Ewout W and Rizopoulos, Dimitris and Movember Foundation's Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium.},
   journal={-},
-  volume={manuscript submitted to European Urology},
+  volume={in press at BJU International},
   number={-},
   pages={-},
+  doi={https://doi.org/10.1111/BJU.15136},
   year={2020},
   publisher={Elsevier}
 }
@@ -408,7 +447,7 @@ publisher={Institute of Statistical Science, Academia Sinica}
 @article{bruinsma2018movember,
   title={The Movember Foundation's GAP3 cohort: a profile of the largest global prostate cancer active surveillance database to date},
   author={Bruinsma, Sophie M and Zhang, Liying and Roobol, Monique J and Bangma, Chris H and Steyerberg, Ewout W and Nieboer, Daan and Van Hemelrijck, Mieke and Movember Foundation's Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium and Trock, Bruce and Ehdaie, Behfar and others},
-  journal={BJU international},
+  journal={BJU International},
   volume={121},
   number={5},
   pages={737--744},
@@ -465,7 +504,7 @@ publisher={Institute of Statistical Science, Academia Sinica}
 @article{fujita2009serial,
   title={Serial prostate biopsies are associated with an increased risk of erectile dysfunction in men with prostate cancer on active surveillance},
   author={Fujita, Kazutoshi and Landis, Patricia and McNeil, Brian K and Pavlovich, Christian P},
-  journal={The Journal of urology},
+  journal={The Journal of Urology},
   volume={182},
   number={6},
   pages={2664--2669},
@@ -496,7 +535,7 @@ year = {1997}
 @article{Ploussard2010,
   title={Pathological findings and prostate specific antigen outcomes after radical prostatectomy in men eligible for active surveillance—does the risk of misclassification vary according to biopsy criteria?},
   author={Ploussard, Guillaume and Salomon, Laurent and Xylinas, Evanguelos and Allory, Yves and Vordos, Dimitri and Hoznek, Andras and Abbou, Claude-Cl{\'e}ment and De La Taille, Alexandre},
-  journal={The Journal of urology},
+  journal={The Journal of Urology},
   volume={183},
   number={2},
   pages={539--545},
@@ -537,7 +576,7 @@ year = {2002}
 @article{carvalho,
   title={Estimating the risks and benefits of active surveillance protocols for prostate cancer: a microsimulation study},
   author={de Carvalho, Tiago M and Heijnsdijk, Eveline AM and de Koning, Harry J},
-  journal={BJU international},
+  journal={BJU International},
   volume={119},
   number={4},
   pages={560--566},
@@ -684,7 +723,7 @@ publisher={American Medical Association}
 @article{ehdaie2014impact,
   title={The impact of repeat biopsies on infectious complications in men with prostate cancer on active surveillance},
   author={Ehdaie, Behfar and Vertosick, Emily and Spaliviero, Massimiliano and Giallo-Uvino, Anna and Taur, Ying and O'sullivan, Maryellen and Livingston, Jennifer and Sogani, Pramod and Eastham, James and Scardino, Peter and others},
-  journal={The Journal of urology},
+  journal={The Journal of Urology},
   volume={191},
   number={3},
   pages={660--664},
@@ -706,7 +745,7 @@ publisher={Elsevier}
 @article{goh2013clinical,
   title={Clinical implications of family history of prostate cancer and genetic risk single nucleotide polymorphism (SNP) profiles in an active surveillance cohort},
   author={Goh, Chee L and Saunders, Edward J and Leongamornlert, Daniel A and Tymrakiewicz, Malgorzata and Thomas, Karen and Selvadurai, Elizabeth D and Woode-Amissah, Ruth and Dadaev, Tokhir and Mahmud, Nadiya and Castro, Elena and others},
-  journal={BJU international},
+  journal={BJU International},
   volume={112},
   number={5},
   pages={666--673},
@@ -717,7 +756,7 @@ publisher={Elsevier}
 @article{telang2017prostate,
   title={Prostate cancer family history and eligibility for active surveillance: a systematic review of the literature},
   author={Telang, Jaya M and Lane, Brian R and Cher, Michael L and Miller, David C and Dupree, James M},
-  journal={BJU international},
+  journal={BJU International},
   volume={120},
   number={4},
   pages={464--467},
@@ -729,7 +768,7 @@ publisher={Elsevier}
 @article{lang2004bayesian,
   title={Bayesian P-splines},
   author={Lang, Stefan and Brezger, Andreas},
-  journal={Journal of computational and graphical statistics},
+  journal={Journal of Computational and Graphical Statistics},
   volume={13},
   number={1},
   pages={183--212},
@@ -740,7 +779,7 @@ publisher={Elsevier}
 @article{coley2017prediction,
   title={Prediction of the pathologic {Gleason} score to inform a personalized management program for prostate cancer},
   author={Coley, R Yates and Zeger, Scott L and Mamawala, Mufaddal and Pienta, Kenneth J and Carter, H Ballentine},
-  journal={European urology},
+  journal={European Urology},
   volume={72},
   number={1},
   pages={135--141},
@@ -830,7 +869,7 @@ year = {2001}
 }
 
 @book{world2014global,
-  title={Global status report on noncommunicable diseases 2014},
+  title={Global Status Report on Noncommunicable Diseases 2014},
   author={WHO, World Health Organization and others},
   number={WHO/NMH/NVI/15.1},
   year={2014},
