--- a/report/lastpaper_jasa/supplementary/sim_study_full_res.tex
+++ b/report/lastpaper_jasa/supplementary/sim_study_full_res.tex
@@ -1,6 +1,6 @@
 % !TEX root =  ../supplementary.tex
 \section{Simulation Study}
-In the simulation study, we evaluated the following biopsy schedules \citep{loeb2014heterogeneity, inoue2018comparative}: biopsy every year (annual), biopsy according to the PRIAS schedule (PRIAS), personalized biopsy schedules based on two fixed risk thresholds, namely, $\kappa=10\%$, and automatically chosen $\kappa^*(v)$ (Section~3 of main manuscript), and automatically chosen ${\kappa^*\{v \mid E(D)\leq 0.75\}}$ with a constraint of 9 months (0.75 years) on expected delay in detecting progression. We compare all the aforementioned schedules on two criteria, namely the number of biopsies they schedule and the corresponding time delay in detection of cancer progression, in years (time of positive biopsy - true time of cancer progression). The corresponding results, using ${\mbox{500} \times \mbox{250}}$ test patients are presented in~\ref{table:sim_study_all}. Since the simulated cohorts are based on PRIAS, roughly only 50\% of the patients progress in the ten year study period. While, we are able to calculate total number of biopsies scheduled in all $500 \times 250$ test patients, but the time delay in detection of progression is available only for those patients who progress in ten years (\textit{progressing}). Hence, we show the simulation results separately for \textit{progressing} and \textit{non-progressing} patients.
+In the simulation study, we evaluated the following biopsy schedules: biopsy every year (annual), biopsy according to the PRIAS schedule (PRIAS), personalized biopsy schedules based on two fixed risk thresholds, namely, $\kappa=10\%$, and automatically chosen $\kappa^*(v)$ (Section~3 of main manuscript), and automatically chosen ${\kappa^*\{v \mid E(D)\leq 0.75\}}$ with a constraint of 0.75 years (9 months) on expected delay in detecting progression. The choice of 0.75 years delay constraint is arbitrary and is only used to illustrate that applying the constraint limits the average delay at 0.75 years.  We compare all the aforementioned schedules on two criteria, namely the number of biopsies they schedule and the corresponding time delay in detection of cancer progression, in years (time of positive biopsy - true time of cancer progression). The corresponding results, using ${\mbox{500} \times \mbox{250}}$ test patients are presented in~\ref{table:sim_study_all}. Since the simulated cohorts are based on PRIAS, roughly only 50\% of the patients progress in the ten year study period. While, we are able to calculate total number of biopsies scheduled in all $500 \times 250$ test patients, but the time delay in detection of progression is available only for those patients who progress in ten years (\textit{progressing}). Hence, we show the simulation results separately for \textit{progressing} and \textit{non-progressing} patients.
 
 \begin{table}[!htb]
 \caption{\textbf{Simulation study results for all patients}: Estimated mean ($\mu$), median (Med), first quartile $\mbox{Q}_1$, and third quartile $\mbox{Q}_3$ for number of biopsies (nb) and for the time delay (d) in detection of cancer progression in years, for various biopsy schedules. The delay is equal to the difference between the time of the positive biopsy and the simulated true time of progression. Types of schedules: ${\kappa=10\%}$ and $\kappa^*(v)$ schedule a biopsy if the cumulative-risk of cancer progression at a visit is more than 10\%, and an automatically chosen threshold, respectively. Schedule ${\kappa^*\{v \mid E(D)\leq 0.75\}}$ is similar to $\kappa^*(v)$ except that the euclidean distance is minimized under the constraint that expected delay in detecting progression is at most 9 months (0.75 years). Annual corresponds to a schedule of yearly biopsies, and PRIAS corresponds to biopsies as per PRIAS protocol.}
