--- a/report/lastpaper_jasa/supplementary/source_code.tex
+++ b/report/lastpaper_jasa/supplementary/source_code.tex
@@ -1,8 +1,3 @@
 % !TEX root =  ../supplementary.tex
 \section{Source Code}
-\label{sec:src}
-\subsection{Creating Personalized Schedules}
-The R code for creating personalized schedules can be found at \url{https://github.com/anirudhtomer/prias/blob/master/src/lastpaper/pers_schedule_api.R}. This source code is compatible with joint model objects obtained using the R package \textbf{JMbayes}~\citep{rizopoulosJMbayes}. The file contains two functions, namely, `personalizedSchedule.mvJMbayes' and `testScheduleConsequences.mvJMbayes'. The parameters of the functions are described in the comments above the function names. In general, the parameters work on the lines of the function survfitJM available in the \textbf{JMbayes} package. The function  `personalizedSchedule.mvJMbayes' returns risk-based personalized schedules based on 200 risk thresholds separated by a gap of every 0.5\% risk. In addition, it also returns the optimal schedule out of the 200 schedules. The function's capability is not limited to risk-based schedules. Rather, if the parameter `risk\_based\_schedules\_only' is set to FALSE, then given a grid of follow-up visits via the parameter `fixed\_grid\_visits', the function finds the optimal schedule among all possible schedules that can be made based on the grid of the future visits. In some scenarios, users may want to calculate expected number of tests and expected time delay in detecting progression for an already decided schedules of tests. This can be obtained via the second function called `testScheduleConsequences.mvJMbayes'.
-
-\subsection{Running the simulation study}
-The simulation study can be run by the R scripts in the folder: \url{https://github.com/anirudhtomer/prias/tree/master/src/lastpaper/simulation}. The file `controller\_model.R' creates a hypothetical PRIAS like prostate cancer active surveillance study with 1000 patients in it. For this purpose it accepts only one command line parameter, an integer which acts as the seed which is set before generating hypothetical patient profiles. The source code also fits a joint model using the R package \textbf{JMbayes} and saves it in a Rdata file. This fitted model can be utilized to create personalized and fixed schedules for the simulated test patients. For this purpose, one can run the R scripts `controller\_schedule\_fixed.R' and `controller\_schedule\_optimal.R'. These files accept two command line parameters, namely, the seed with which a joint model was fitted earlier, and the hypothetical patient ID of the test patient for which personalized and fixed schedules are to be created. These hypothetical test patient IDs are always between 751 and 1000, i.e., a total of 250 test patients. The file `controller\_schedule\_fixed.R' runs annual schedule, biennial schedule, PRIAS schedule, and risk-based personalized schedules using fixed thresholds of 5\%, 10\% and 15\%. Whereas, the file `controller\_schedule\_optimal.R' runs the code to find an optimal personalized schedule using a visit-specific threshold, and an optimal personalized schedule using a visit-specific threshold under the constraint that the expected delay in detecting progression is at most 0.75 years.
+Source code URL: \url{https://anonymous.4open.science/r/d862487e-9a1a-4472-9564-ff2be4c625fd/}. It has also been uploaded as a zip file with the manuscript.
